@@ -1,11 +1,12 @@
 % Generated by roxygen2 (4.1.0): do not edit by hand
-% Please edit documentation in R/AllGenerics.R, R/beast.R, R/codeml.R, R/codeml_mlc.R, R/paml_rst.R
+% Please edit documentation in R/AllGenerics.R, R/beast.R, R/codeml.R, R/codeml_mlc.R, R/hyphy.R, R/paml_rst.R
 \docType{methods}
 \name{get.tree}
 \alias{get.tree}
 \alias{get.tree,beast}
 \alias{get.tree,codeml-method}
 \alias{get.tree,codeml_mlc-method}
+\alias{get.tree,hyphy-method}
 \alias{get.tree,paml_rst-method}
 \title{get.tree method}
 \usage{
@@ -16,6 +17,8 @@ get.tree(object, ...)
 \S4method{get.tree}{codeml}(object, by = "rst", ...)
 
 \S4method{get.tree}{codeml_mlc}(object, ...)
+
+\S4method{get.tree}{hyphy}(object)
 
 \S4method{get.tree}{paml_rst}(object)
 }
