@@ -1,11 +1,12 @@
 % Generated by roxygen2 (4.1.0): do not edit by hand
-% Please edit documentation in R/beast.R, R/codeml.R, R/codeml_mlc.R, R/jplace.R, R/paml_rst.R
+% Please edit documentation in R/beast.R, R/codeml.R, R/codeml_mlc.R, R/hyphy.R, R/jplace.R, R/paml_rst.R
 \docType{methods}
 \name{show,beast-method}
 \alias{show}
 \alias{show,beast-method}
 \alias{show,codeml-method}
 \alias{show,codeml_mlc-method}
+\alias{show,hyphy-method}
 \alias{show,paml_rst-method}
 \title{show method}
 \usage{
@@ -14,6 +15,8 @@
 \S4method{show}{codeml}(object)
 
 \S4method{show}{codeml_mlc}(object)
+
+\S4method{show}{hyphy}(object)
 
 show(object)
 
